css/main.css
/* ... */
.ot-column {
  border-bottom: 1px solid lightgrey;
  height: 26.5em;
}

.book-list-column li {
  margin-bottom: 0.7em;
}

.ot-nt-divider {
  clear: both;
}


/* Formatting for large tablets and desktop */

@media only screen and (min-width: 770px) {
  .ot-column {
    border-bottom: unset;
    height: unset;
  }
  .book-list-column {
    width: unset;
  }
  .ot-nt-divider {
    clear: none;
    border-left: 1px solid #DDDDDD;
    margin-left: 0.5em;
  }
  .ot-nt-divider li {
    margin-left: 1em;
  }
}

.verse-list-menu .focused-button {
  border: 1px dashed #2779aa;
}

.fullscreen-button {
  position: fixed;
  top: 0.5em;
  right: 1em;
  width: auto;
  height: auto;
  padding: 0.3em 0.4em;
  font-size: 1em;
  z-index: 100;
}

.OSX .fullscreen-button {
  display: none;
}

.display-options-button>i {
  font-size: 1.3em;
}


.fg-button {
  cursor: pointer;
}

.verse-list-menu .fg-button {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-right: 1em;
  margin-bottom: 0.5em;
  height: 2.2em;
  min-width: 1em;
  padding: 0 0.8em;
}

.verse-list-menu .display-options-button,
.verse-list-menu .app-info-button,
.verse-list-menu .export-tagged-verses-button {
  justify-content: center;
}

.verse-list-menu i.fas+[i18n],
.verse-list-menu i.fa-caret-down:last-child {
  margin-left: 0.8em;
}

.text-size-menu {
  padding: 0.5em 0.8em;
}

.text-size-menu .verse-list-menu-line {
  padding: 0;
}

.text-size-menu .fg-button {
  margin-bottom: 0;
  height: 2rem;
  width: 1.3rem;
  font-size: 0.8em;
  justify-content: center;
}
.text-size-menu .fg-button:last-child {
  margin-right: 0;
}

.verse-list-menu .fg-button.ui-state-active {
  border-bottom-right-radius: 0;
}
.verse-list-menu .fg-button.ui-state-active .fa-caret-down:before {
  content: "\f00d";
}
.book-select-label {
  float: left;
}

.book-select-button .ui-icon,
.tag-select-button .ui-icon,
.module-search-button .ui-icon,
.display-options-button .ui-icon,
.assign-tag-menu-button .ui-icon,
.note-session-select-button .ui-icon {
  float: right;
}

.ui-icon-close {
  background-position: -96px -128px !important;
}

.book-available a:link,
.book-available a:hover,
.book-available a:visited,
.book-available a:focus {
  color: black;
}

.book-unavailable a:link,
.book-unavailable a:hover,
.book-unavailable a:visited,
.book-unavailable a:focus {
  color: grey;
}

.book-list-column li a:link,
.book-list-column li.book-available a:visited,
.book-list-column li.book-available a:hover,
.book-list-column li.book-available a:focus {
  text-decoration: none;
  cursor: default;
  border: 1px solid white;
  padding: 2px;
  margin: 1px;
}

.darkmode--activated .book-list-column li a:link,
.darkmode--activated .book-list-column li.book-available a:visited,
.darkmode--activated .book-list-column li.book-available a:hover,
.darkmode--activated .book-list-column li.book-available a:focus {
  border: 1px;
  color: #cccccc;
}

.darkmode--activated .book-unavailable a:link,
.darkmode--activated .book-unavailable a:hover,
.darkmode--activated .book-unavailable a:visited,
.darkmode--activated .book-unavailable a:focus {
  color: grey;
}

.book-list-column li.book-available a:link,
.book-list-column li.book-available a:visited {
  cursor: pointer;
}

.book-list-column li.book-available a:hover,
.book-list-column li.book-available a:focus {
  /*text-decoration: underline;*/
  border: 1px solid #74B2E2;
  margin: 1px;
  padding: 2px;
  border-radius: 4px;
  background: #e4f1fb url(images/ui-bg_glass_100_e4f1fb_1x400.png) 50% 50% repeat-x;
}

.darkmode--activated .book-list-column li.book-available a:hover,
.darkmode--activated .book-list-column li.book-available a:focus {
  background: none;
  background-color: #00396a;
}

.book-list-column li.book-selected a:link,
.book-list-column li.book-selected a:visited,
.book-list-column li.book-selected a:focus {
  border: 1px solid #74B2E2;
  margin: 1px;
  border-radius: 4px;
  padding: 2px;
  background: #e4f1fb url(images/ui-bg_glass_100_e4f1fb_1x400.png) 50% 50% repeat-x;
}

.darkmode--activated .book-list-column li.book-selected a:link,
.darkmode--activated .book-list-column li.book-selected a:visited,
.darkmode--activated .book-list-column li.book-selected a:focus {
  background: none;
  background-color: #00396a;
  border: 1px solid #00396a;
}

.verse-list-loading-indicator,
.loading-indicator {
  display: none;
  width: 300px;
  height: 30px;
  margin-top: 200px;
  margin-left: auto;
  margin-right: auto;
}

#startup-loading-indicator {
  font-size: 130%;
  position: absolute;
  height: 200px;
  margin: -100px 0 0 -100px;
  top: 50%;
  left: 50%;
}

#startup-loading-indicator .loader {
  display: block;
}

#startup-loading-indicator.incompatible-windows,
#startup-loading-indicator.permissions-issue {
  position: unset;
  margin: 50px;
}

#verse-list-popup-loading-indicator,
#compare-translations-loading-indicator {
  display: none;
  /* width: 300px; */
  height: 30px;
  margin-top: 3em;
}

.loading-indicator-text,
#loading-subtitle {
  font: caption;
  font-size: 1em;
  font-weight: bold;
  color: #808080;
}

#startup-loading-indicator.incompatible-windows .loading-indicator-text {
  color: black;
  font-weight: normal;
}

.verse-list-header,
.verse-statistics-chart-container {
  display: none;
  margin-left: 1em;
  margin-top: 0.5em;
}

.reference-verse-list-header {
  margin-left: 0.2em;
}

.verse-statistics-chart-container {
  width: 95%;
  height: 12em;
}

#show-translation-settings-button,
#show-dict-settings-button {
  padding: 0.5em;
  display: block;
  width: 100%;
}

.options-header {
  font-weight: bold;
  text-align: center;
  margin-top: 0.5em;
  margin-bottom: 0.8em;
}


/*.options-header:not(.first) {
  border-top: 2px solid #DDDDDD;
  padding-top: 0.5em;
}*/

.switch-box {
  clear: both;
  width: 85%;
  margin-bottom: 1em;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.switch-box input,
.switch-box button {
  padding: 0.3em;
}
/* ... */

